streamlined translation files

--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -83,6 +83,12 @@ connect.name=Conectar
 
 console.updatecheck.new_developmentversion=------------ Nueva versi\u00F3n en desarrollo descargada ------------
 
+##createshortcut.description=Creates a shortcut to this folder on your desktop
+##createshortcut.key=C
+##createshortcut.name=Create desktop shortcut
+
+##delete_confimation.busy.description=Removing file(s)
+##delete_confimation.busy.title=Deleting file(s)
 ##delete_confimation.text=Are you sure you want to delete the following file(s)\:\n (Note that these files are really deleted from your system, not moved to the "Recycle Bin").
 ##delete_confimation.text_movetorecyclebin=Are you sure you want to move the following file(s) to the PowerFolder Recycle Bin?
 ##delete_confimation.text_movetorecyclebin_DIR=<DIR>
@@ -133,10 +139,6 @@ disablesilentmode.description=Modo silencioso activo, no se detectar\u00E1 archi
 disablesilentmode.key=w
 disablesilentmode.name=\u00A1Despertar\!
 
-##donotdownloadfile.description=Mark this file as "do not download on auto-download synchronization profiles"
-##donotdownloadfile.key=D
-##donotdownloadfile.name=Do Not Automaticaly Download
-
 downloadfile.description=Descarga el(los) archivo(s) seleccionado(s) (o archivos en el directorio). Los archivos eliminados se volveran a descargar
 downloadfile.failed.sourcenotfound=No se puede descargar el archivo {0}, no se encuentra la fuente
 downloadfile.key=D
@@ -146,6 +148,8 @@ downloadfile.unable_to_download=No se puede descargar
 ##empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 ##empty_recycle_bin.key=E
 ##empty_recycle_bin.name=Empty Recycle Bin
+##empty_recycle_bin.working.description=Deleting files
+##empty_recycle_bin.working.title=Emptying the Recycle Bin
 
 ##empty_recycle_bin_confimation.text=Are your sure to want to empty the PowerFolder Recycle Bin?
 ##empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
@@ -160,11 +164,11 @@ enablesilentmode.name=Modo silencioso
 fileinfo.availability=Disponibilidad
 fileinfo.available=Disponible
 fileinfo.deleted=Borrado
-##fileinfo.donotautodownload=Do not auto download
 fileinfo.downloading=Descargando
 ##fileinfo.downloading_from_member=Downloading from {0}
 fileinfo.expected=Esperando
 fileinfo.header=Detalles del archivo
+##fileinfo.ignore=This file is excluded from synchronization
 fileinfo.location=Ubicaci\u00F3n
 fileinfo.modifiedby=Modificado por
 fileinfo.modifieddate=Modificado el
@@ -242,13 +246,14 @@ folderjoin.secret=Secreta
 folderjoin.warning.notempty.text=El directorio para la copia local de la carpeta '{0}' no est\u00E1 vac\u00EDo.\nTodos los archivos all\u00ED contenidos se enviar\u00E1n a los miembros.\n\u00BFEst\u00E1 seguro de ubicar la copia local en\n'{1}' ?
 folderjoin.warning.notempty.title=La ubicaci\u00F3n local no est\u00E1 vac\u00EDa
 
-##folderjoinleave.description=Joins or leaves a Folder
+##folderjoinleave.description=Joins or leaves a folder
 ##folderjoinleave.join=Join folder
 ##folderjoinleave.key=f
 ##folderjoinleave.leave=Leave folder
 ##folderjoinleave.name=Join folder
 
 folderleave.description=Abandonar esta carpeta (Dejar de compartir o descargar informaci\u00F3n)
+##folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=\u00BFAbandonar la carpeta {0} ?
 folderleave.dialog.title=\u00BFAbandonar la carpeta {0} ?
 folderleave.key=A
@@ -268,7 +273,22 @@ folderleave.name=Abandonar carpeta
 ##folderpanel.hometab.title=Home
 ##folderpanel.hometab.total_number_of_files=Total number of files (local+deleted+available)
 ##folderpanel.hometab.total_size=Total size
-##folderpanel.hometab.total_synchronisation_percentage=Total synchronisation percentage
+##folderpanel.settingstab.add_a_pattern.example=example/*.jpg
+##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
+##folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
+##folderpanel.settingstab.addbutton.key=A
+##folderpanel.settingstab.addbutton.name=Add
+##folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+##folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
+##folderpanel.settingstab.editbutton.description=Edit a pattern
+##folderpanel.settingstab.editbutton.key=E
+##folderpanel.settingstab.editbutton.name=Edit
+##folderpanel.settingstab.ignorepatterns=Ignore patterns
+##folderpanel.settingstab.removebutton.description=Remove a pattern
+##folderpanel.settingstab.removebutton.key=R
+##folderpanel.settingstab.removebutton.name=Remove
+##folderpanel.settingstab.title=Settings
 
 ##folderrepository.warnonclose.neveraskagain=Never ask this again. 
 ##folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
@@ -304,6 +324,7 @@ general.folder.secret=Privado (requiere invitaci\u00F3n)
 general.foldername=Nombre
 ##general.friendlist=Friendlist
 ##general.from=from
+##general.help=help
 general.hide=ocultar
 general.inet=i-net
 general.localcopyat=Copia local en
@@ -332,6 +353,14 @@ general.uploads=Env\u00EDos
 general.user=Usuario
 general.visibility=Visibilidad
 ##general.yesterday=yesterday
+
+##hideoffline.description=The offline users will be filtered from this search result 
+##hideoffline.key=H
+##hideoffline.name=Hide offline users
+
+##ignorefile.description=File(s) will not be downloaded/shared 
+##ignorefile.key=I
+##ignorefile.name=Add file to Ignore
 
 imagefileinfo.resolution=Resoluci\u00F3n
 imagefileinfo.unknown=Desconocido 
@@ -486,6 +515,7 @@ preferences.dialog.createdesktopshortcuts=Crear acceso directo en el Escritorio
 preferences.dialog.dyndns=mi DNS (din\u00E1mica)
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndns.title=DynDNS
+##preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 ##preferences.dialog.dyndnsCurrentIP=Current IP
 ##preferences.dialog.dyndnsHostname=Hostname
 ##preferences.dialog.dyndnsLoginPanel=Login
@@ -493,7 +523,6 @@ preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
 ##preferences.dialog.dyndnsUpdateButton=Force Update
 ##preferences.dialog.dyndnsUpdateError=DynDns service returned an error\: 
-##preferences.dialog.dyndnsUpdateOnStart=Update on start
 ##preferences.dialog.dyndnsUpdateTitle=DynDns Updater
 ##preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
 ##preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\: 
@@ -511,7 +540,7 @@ preferences.dialog.language=Idioma
 ##preferences.dialog.networkmode.lanonly=LAN only
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 ##preferences.dialog.networkmode.private=Private Networking   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is posible.</BODY></HTML>
 ##preferences.dialog.networkmode.public=Public Networking
 ##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=Apodo
@@ -525,7 +554,7 @@ preferences.dialog.nonwindowsinfo=Atenci\u00F3n\: Algunas opciones solo est\u00E
 ##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Algunos cambios necesitan reiniciar PowerFolder.\n\u00BFQuiere reiniciar ahora?\n 
 preferences.dialog.restarttitle=Solicitar reinicio
-##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showadvanced=Show Advanced Preferences
 ##preferences.dialog.showpreviewpanel=Enable internal image preview
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 ##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
@@ -585,6 +614,12 @@ reconnect.description=Reconectarse a este usuario ahora
 reconnect.key=r
 reconnect.name=Reconectar
 
+##recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
+##recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
+##recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
+##recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
+##recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+
 ##remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
 ##remove_from_recycle_bin.key=D
 ##remove_from_recycle_bin.name=Delete File
@@ -607,6 +642,9 @@ requestfilelist.name=Solicitar nueva lista de archivos
 ##requestnetfolderlist.description=Refreshes the list of public folders
 ##requestnetfolderlist.key=r
 ##requestnetfolderlist.name=Refresh List
+
+##restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
+##restore.busy.title=Restoring file(s)
 
 ##restorefile.description=Undelete file
 ##restorefile.key=r
@@ -708,6 +746,10 @@ transfers.queued=en cola
 transfers.requested=pedidos
 ##transfers.searching=Searching...
 transfers.to=Para
+
+##unignorefile.description=File(s) will be downloaded/shared again
+##unignorefile.key=U
+##unignorefile.name=Remove from Ignore
 
 ##webservice_request_folder_join.description=Requests the PowerFolder service to join this folder
 ##webservice_request_folder_join.key=w
