--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -83,6 +83,12 @@ connect.name=\u63A5\u7D9A(C)
 
 console.updatecheck.new_developmentversion=------------ \u65B0\u958B\u767A\u7248\u306E\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9 ------------
 
+##createshortcut.description=Creates a shortcut to this folder on your desktop
+##createshortcut.key=C
+##createshortcut.name=Create desktop shortcut
+
+##delete_confimation.busy.description=Removing file(s)
+##delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u672C\u5F53\u306B\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F\:\n\uFF08\u3053\u308C\u3089\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u201D\u3054\u307F\u7BB1\u201D\u3078\u79FB\u52D5\u3055\u308C\u305A\u306B\u3001\u30B7\u30B9\u30C6\u30E0\u304B\u3089\u5B9F\u969B\u306B\u524A\u9664\u3055\u308C\u308B\u306E\u3067\u6CE8\u610F\u3057\u3066\u304F\u3060\u3055\u3044\u3002\uFF09
 delete_confimation.text_movetorecyclebin=\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u672C\u5F53\u306B PowerFolder \u3054\u307F\u7BB1 \u3078\u79FB\u3057\u307E\u3059\u304B\uFF1F
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
@@ -133,10 +139,6 @@ disablesilentmode.description=\u30B5\u30A4\u30EC\u30F3\u30C8\u30E2\u30FC\u30C9\u
 disablesilentmode.key=W
 disablesilentmode.name=\u5FA9\u5E30\uFF01(W)
 
-##donotdownloadfile.description=Mark this file as "do not download on auto-download synchronization profiles"
-##donotdownloadfile.key=D
-##donotdownloadfile.name=Do Not Automaticaly Download
-
 downloadfile.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\uFF08\u307E\u305F\u306F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u30D5\u30A1\u30A4\u30EB\uFF09\u3092\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3001\u524A\u9664\u6E08\u307F\u30D5\u30A1\u30A4\u30EB\u306E\u5834\u5408\u306F\u518D\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9
 downloadfile.failed.sourcenotfound=\u30D5\u30A1\u30A4\u30EB {0} \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF\u3001\u30BD\u30FC\u30B9\u672A\u691C\u51FA\u3002
 downloadfile.key=D
@@ -146,6 +148,8 @@ downloadfile.unable_to_download=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF
 empty_recycle_bin.description=PowerFolder \u3054\u307F\u7BB1 \u3092\u7A7A\u3059\u308B
 empty_recycle_bin.key=E
 empty_recycle_bin.name=\u3054\u307F\u7BB1\u3092\u7A7A\u306B\u3059\u308B(E)
+##empty_recycle_bin.working.description=Deleting files
+##empty_recycle_bin.working.title=Emptying the Recycle Bin
 
 empty_recycle_bin_confimation.text=PowerFolder \u3054\u307F\u7BB1 \u3092\u672C\u5F53\u306B\u7A7A\u306B\u3057\u307E\u3059\u304B\uFF1F
 empty_recycle_bin_confimation.title=PowerFolder \u3054\u307F\u7BB1 \u3092\u7A7A\u306B\u3059\u308B
@@ -160,11 +164,11 @@ filecopier.progressdialog.title=\u30D5\u30A1\u30A4\u30EB\u30B3\u30D4\u30FC\u306E
 fileinfo.availability=\u53D6\u5F97\u53EF\u80FD\u5148
 fileinfo.available=\u53D6\u5F97\u53EF
 fileinfo.deleted=\u524A\u9664\u6E08
-##fileinfo.donotautodownload=Do not auto download
 fileinfo.downloading=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E2D
 fileinfo.downloading_from_member={0} \u304B\u3089\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E2D
 fileinfo.expected=\u671F\u5F85
 fileinfo.header=\u30D5\u30A1\u30A4\u30EB\u306E\u8A73\u7D30
+##fileinfo.ignore=This file is excluded from synchronization
 fileinfo.location=\u5834\u6240
 fileinfo.modifiedby=\u5909\u66F4\u8005
 fileinfo.modifieddate=\u5909\u66F4\u65E5\u6642
@@ -249,6 +253,7 @@ folderjoinleave.leave=\u30D5\u30A9\u30EB\u30C0\u9000\u907F(F)
 folderjoinleave.name=\u30D5\u30A9\u30EB\u30C0\u53C2\u52A0
 
 folderleave.description=\u3053\u306E\u30D5\u30A9\u30EB\u30C0\u3092\u9000\u907F\uFF08\u30C7\u30FC\u30BF\u306E\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3084\u5171\u6709\u3092\u53D6\u308A\u6B62\u3081\uFF09
+##folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=\u30D5\u30A9\u30EB\u30C0 {0} \u3092\u9000\u907F\u3057\u307E\u3059\u304B\uFF1F
 folderleave.dialog.title={0} \u30D5\u30A9\u30EB\u30C0\u9000\u907F\uFF1F
 folderleave.key=L
@@ -268,7 +273,22 @@ folderpanel.hometab.synchronisation_percentage=\u540C\u671F\u5272\u5408
 folderpanel.hometab.title=\u30DB\u30FC\u30E0
 folderpanel.hometab.total_number_of_files=\u5408\u8A08\u30D5\u30A1\u30A4\u30EB\u6570\uFF08\u30ED\u30FC\u30AB\u30EB\uFF0B\u524A\u9664\u6E08\uFF0B\u53D6\u5F97\u53EF\uFF09
 folderpanel.hometab.total_size=\u5408\u8A08\u30B5\u30A4\u30BA
-folderpanel.hometab.total_synchronisation_percentage=\u5408\u8A08\u540C\u671F\u5272\u5408
+##folderpanel.settingstab.add_a_pattern.example=example/*.jpg
+##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
+##folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
+##folderpanel.settingstab.addbutton.key=A
+##folderpanel.settingstab.addbutton.name=Add
+##folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+##folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
+##folderpanel.settingstab.editbutton.description=Edit a pattern
+##folderpanel.settingstab.editbutton.key=E
+##folderpanel.settingstab.editbutton.name=Edit
+##folderpanel.settingstab.ignorepatterns=Ignore patterns
+##folderpanel.settingstab.removebutton.description=Remove a pattern
+##folderpanel.settingstab.removebutton.key=R
+##folderpanel.settingstab.removebutton.name=Remove
+##folderpanel.settingstab.title=Settings
 
 folderrepository.warnonclose.neveraskagain=\u4ECA\u5F8C\u3053\u306E\u8CEA\u554F\u306F\u3057\u306A\u3044
 folderrepository.warnonclose.text=\u4EE5\u4E0B\u306E\u30D5\u30A9\u30EB\u30C0\u306F\u307E\u3060\u540C\u671F\u3055\u308C\u3066\u3044\u307E\u305B\u3093\:\n\n\n\n{0}\n\n\n\u7D42\u4E86\u3092\u7D9A\u884C\u3057\u307E\u3059\u304B\uFF1F
@@ -304,6 +324,7 @@ general.folder.secret=\u30D7\u30E9\u30A4\u30D9\u30FC\u30C8\uFF08\u8981\u62DB\u5F
 general.foldername=\u540D\u524D
 ##general.friendlist=Friendlist
 general.from=from
+##general.help=help
 general.hide=\u96A0\u3059
 general.inet=i-net
 general.localcopyat=\u30ED\u30FC\u30AB\u30EB\u30B3\u30D4\u30FC\u306E\u5834\u6240
@@ -332,6 +353,14 @@ general.uploads=\u30A2\u30C3\u30D7\u30ED\u30FC\u30C9
 general.user=\u30E6\u30FC\u30B6\u30FC
 general.visibility=\u516C\u958B\u5EA6
 general.yesterday=\u6628\u65E5
+
+##hideoffline.description=The offline users will be filtered from this search result 
+##hideoffline.key=H
+##hideoffline.name=Hide offline users
+
+##ignorefile.description=File(s) will not be downloaded/shared 
+##ignorefile.key=I
+##ignorefile.name=Add file to Ignore
 
 imagefileinfo.resolution=\u89E3\u50CF\u5EA6
 imagefileinfo.unknown=\u4E0D\u660E
@@ -486,6 +515,7 @@ preferences.dialog.createdesktopshortcuts=\u30C7\u30B9\u30AF\u30C8\u30C3\u30D7\u
 preferences.dialog.dyndns=\u81EA\u5206\u306E\uFF08\u52D5\u7684\uFF09DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 ##preferences.dialog.dyndns.title=DynDNS
+##preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=\u73FE\u5728\u306E IP\:
 preferences.dialog.dyndnsHostname=\u30DB\u30B9\u30C8\u540D\:
 preferences.dialog.dyndnsLoginPanel=\u30ED\u30B0\u30A4\u30F3
@@ -493,7 +523,6 @@ preferences.dialog.dyndnsPassword=\u30D1\u30B9\u30EF\u30FC\u30C9\:
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns \u8A2D\u5B9A
 preferences.dialog.dyndnsUpdateButton=\u76F4\u3061\u306B\u66F4\u65B0
 preferences.dialog.dyndnsUpdateError=DynDns \u30B5\u30FC\u30D3\u30B9 \u304B\u3089\u30A8\u30E9\u30FC\u5FDC\u7B54\:
-preferences.dialog.dyndnsUpdateOnStart=\u30B9\u30BF\u30FC\u30C8\u6642\u306B\u66F4\u65B0\:
 preferences.dialog.dyndnsUpdateTitle=DynDns \u30A2\u30C3\u30D7\u30C7\u30FC\u30BF\u30FC
 preferences.dialog.dyndnsUpdateUnknowError=DynDns \u30B5\u30FC\u30D3\u30B9 \u304B\u3089\u672A\u77E5\u306E\u8B66\u544A\u5FDC\u7B54
 preferences.dialog.dyndnsUpdateWarning=DynDns \u30B5\u30FC\u30D3\u30B9 \u304B\u3089\u8B66\u544A\u5FDC\u7B54\:
@@ -511,7 +540,7 @@ preferences.dialog.language=\u8A00\u8A9E
 ##preferences.dialog.networkmode.lanonly=LAN only
 ##preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
 ##preferences.dialog.networkmode.private=Private Networking   
-##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so so the finding of your friends in the network is posible.</BODY></HTML>
+##preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Disables public folder sharing. Restricts connectivity to interesting users only.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to some other users so finding of your friends in the network is posible.</BODY></HTML>
 ##preferences.dialog.networkmode.public=Public Networking
 ##preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Enables public Folder sharing.<BR>Private folders will always require an Invitation, regardless of the networking mode.</BODY></HTML>
 preferences.dialog.nickname=\u30CB\u30C3\u30AF\u30CD\u30FC\u30E0
@@ -525,7 +554,7 @@ preferences.dialog.nonwindowsinfo=\u6CE8\u610F\: Windows \u30B7\u30B9\u30C6\u30E
 ##preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=\u3044\u304F\u3064\u304B\u306E\u8A2D\u5B9A\u9805\u76EE\u306F\u3001\u5909\u66F4\u306E\u9069\u7528\u306B PowerFolder \u306E\u518D\u8D77\u52D5\u304C\u5FC5\u8981\u3067\u3059\u3002\n\u76F4\u3061\u306B\u518D\u8D77\u52D5\u3057\u307E\u3059\u304B\uFF1F\n
 preferences.dialog.restarttitle=\u518D\u8D77\u52D5\u8981\u6C42
-##preferences.dialog.showadvanged=Show Advanged Preferences
+##preferences.dialog.showadvanced=Show Advanced Preferences
 ##preferences.dialog.showpreviewpanel=Enable internal image preview
 ##preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 ##preferences.dialog.silentthrottle=Silentmode bandwidth throttle 
@@ -585,6 +614,12 @@ reconnect.description=\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3078\u306E\u518D\u63
 reconnect.key=R
 reconnect.name=\u518D\u63A5\u7D9A(R)
 
+##recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
+##recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
+##recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
+##recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
+##recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+
 remove_from_recycle_bin.description=PowerFolder \u3054\u307F\u7BB1\u304B\u3089\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=\u30D5\u30A1\u30A4\u30EB\u524A\u9664(D)
@@ -607,6 +642,9 @@ requestfilelist.name=\u65B0\u898F\u30D5\u30A1\u30A4\u30EB\u30EA\u30B9\u30C8\u306
 requestnetfolderlist.description=\u30D1\u30D6\u30EA\u30C3\u30AF\u30D5\u30A9\u30EB\u30C0\u306E\u30EA\u30B9\u30C8\u3092\u66F4\u65B0
 requestnetfolderlist.key=R
 requestnetfolderlist.name=\u30EA\u30B9\u30C8\u306E\u66F4\u65B0(R)
+
+##restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
+##restore.busy.title=Restoring file(s)
 
 restorefile.description=\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664\u305B\u305A\u306B\u5143\u306B\u623B\u3059
 restorefile.key=r
@@ -708,6 +746,10 @@ transfers.queued=\u9806\u756A\u5F85\u3061
 transfers.requested=\u8981\u6C42
 transfers.searching=\u691C\u7D22\u4E2D...
 transfers.to=\u9001\u308A\u5148
+
+##unignorefile.description=File(s) will be downloaded/shared again
+##unignorefile.key=U
+##unignorefile.name=Remove from Ignore
 
 webservice_request_folder_join.description=Requests the PowerFolder service to join this folder
 webservice_request_folder_join.key=w
