--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -83,6 +83,12 @@ connect.name=Verbinden
 
 console.updatecheck.new_developmentversion=------------ Nieuwe ontwikkel versie gedownload ------------
 
+##createshortcut.description=Creates a shortcut to this folder on your desktop
+##createshortcut.key=C
+##createshortcut.name=Create desktop shortcut
+
+##delete_confimation.busy.description=Removing file(s)
+##delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text=Weet u zeker dat u het/de volgende bestand(en) wilt verwijderen\:\n\n{0}\nLet op\: deze bestanden worden werkelijk van uw computer verwijderd en niet in uw Prullenbak geplaatst
 delete_confimation.text_movetorecyclebin=Weet u zeker dat u de  volgende bestanden naar de PowerFolder Prullenbak wil verplaatsen?
 delete_confimation.text_movetorecyclebin_DIR=<DIR>
@@ -133,10 +139,6 @@ disablesilentmode.description=Passieve mode is gekozen, toegevoegde/gewijzigde b
 disablesilentmode.key=w
 disablesilentmode.name=Wakker worden\!
 
-donotdownloadfile.description=Markeer dit bestand als "Niet automatisch downloaden in een automatisch download profiel"
-donotdownloadfile.key=N
-donotdownloadfile.name=Niet automatisch downloaden
-
 downloadfile.description=Download geselecteerde bestand(en) (of bestanden in een map). Verwijderde bestanden zullen opnieuw worden gedownload
 downloadfile.failed.sourcenotfound=Niet instaat om bestand {0}, te downloaden geen bron gevonden
 downloadfile.key=D
@@ -146,6 +148,8 @@ downloadfile.unable_to_download=Download mislukt
 empty_recycle_bin.description=Maak PowerFolder prullenbalk leeg
 empty_recycle_bin.key=L
 empty_recycle_bin.name=Leeg Prullenbak
+##empty_recycle_bin.working.description=Deleting files
+##empty_recycle_bin.working.title=Emptying the Recycle Bin
 
 empty_recycle_bin_confimation.text=Weet u zeker dat u de PowerFolder Prullenbak wilt legen?
 empty_recycle_bin_confimation.title=Maak PowerFolder prullenbalk leeg
@@ -160,11 +164,11 @@ filecopier.progressdialog.title=Kopie voortgang
 fileinfo.availability=Beschikbaarheid
 fileinfo.available=Beschikbaar
 fileinfo.deleted=Verwijderd
-fileinfo.donotautodownload=Niet automatisch downloaden
 fileinfo.downloading=Downloaden
 fileinfo.downloading_from_member=Downloaden van {0}
 fileinfo.expected=Verwacht
 fileinfo.header=Bestand details
+##fileinfo.ignore=This file is excluded from synchronization
 fileinfo.location=Lokatie
 fileinfo.modifiedby=Bewerkt door
 fileinfo.modifieddate=Bewerkt op
@@ -249,6 +253,7 @@ folderjoinleave.leave=Verlaat folder
 folderjoinleave.name=Lid worden
 
 folderleave.description=Verlaat deze folder (Stop delen en downloading van gegevens)
+##folderleave.dialog.sync_warning=The folder is currently synchronizing\!
 folderleave.dialog.text=Stop delen van folder {0} ?
 folderleave.dialog.title=Stop delen van Folder {0} ?
 folderleave.key=V
@@ -268,7 +273,22 @@ folderpanel.hometab.synchronisation_percentage=Synchronizatie percentage
 folderpanel.hometab.title=Start
 folderpanel.hometab.total_number_of_files=Totaal aantal bestanden (lokaal+verwijderd+beschikbaar)
 folderpanel.hometab.total_size=Totale omvang
-folderpanel.hometab.total_synchronisation_percentage=Totale synchronizatie percentage
+##folderpanel.settingstab.add_a_pattern.example=example/*.jpg
+##folderpanel.settingstab.add_a_pattern.text=Enter a Pattern to exclude files from synchronization
+##folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
+##folderpanel.settingstab.addbutton.description=Add a pattern to exclude files from synchronization
+##folderpanel.settingstab.addbutton.key=A
+##folderpanel.settingstab.addbutton.name=Add
+##folderpanel.settingstab.edit_a_pattern.text=Edit a Pattern to exclude files from synchronization
+##folderpanel.settingstab.edit_a_pattern.title=Edit ignore pattern
+##folderpanel.settingstab.editbutton.description=Edit a pattern
+##folderpanel.settingstab.editbutton.key=E
+##folderpanel.settingstab.editbutton.name=Edit
+##folderpanel.settingstab.ignorepatterns=Ignore patterns
+##folderpanel.settingstab.removebutton.description=Remove a pattern
+##folderpanel.settingstab.removebutton.key=R
+##folderpanel.settingstab.removebutton.name=Remove
+##folderpanel.settingstab.title=Settings
 
 folderrepository.warnonclose.neveraskagain=Nooit meer vragen. 
 folderrepository.warnonclose.text=Deze folder zijn nog niet gesynchronizeerd\:\n\n\n\n{0}\n\n\nDoorgaan met sluiten?
@@ -304,6 +324,7 @@ general.folder.secret=Prive (vereist invitatie)
 general.foldername=Naam
 general.friendlist=Vriendenlijst
 general.from=van
+##general.help=help
 general.hide=verberg
 general.inet=i-net
 general.localcopyat=Lokale kopie 
@@ -332,6 +353,14 @@ general.uploads=Uploads
 general.user=User
 general.visibility=Toegankelijkheid
 general.yesterday=vandaag
+
+##hideoffline.description=The offline users will be filtered from this search result 
+##hideoffline.key=H
+##hideoffline.name=Hide offline users
+
+##ignorefile.description=File(s) will not be downloaded/shared 
+##ignorefile.key=I
+##ignorefile.name=Add file to Ignore
 
 imagefileinfo.resolution=Resolutie
 imagefileinfo.unknown=Onbekend 
@@ -486,6 +515,7 @@ preferences.dialog.dialogs.warnonpossiblefilenameproblems=Waarschuw bij mogelijk
 preferences.dialog.dyndns=Mijn - dynamic - DNS
 preferences.dialog.dyndns.link=http\://www.dyndns.org/services/dns/dyndns
 preferences.dialog.dyndns.title=DynDNS
+##preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Huidig IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
@@ -493,7 +523,6 @@ preferences.dialog.dyndnsPassword=Wachtwoord
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Instellingen
 preferences.dialog.dyndnsUpdateButton=Nu Updaten
 preferences.dialog.dyndnsUpdateError=Fout\!  Bijwerk resultaat\: 
-preferences.dialog.dyndnsUpdateOnStart=Update bij start
 preferences.dialog.dyndnsUpdateTitle=DynDns Bijwerker
 preferences.dialog.dyndnsUpdateUnknowError=Bijwerk resultaat\: Onbekende fout\!
 preferences.dialog.dyndnsUpdateWarning=Waarschuwing\!  Bijwerk resultaat
@@ -509,11 +538,11 @@ preferences.dialog.lanlinesettings=LAN verbindings snelheid
 preferences.dialog.linesettings=Internet verbindings snelheid
 preferences.dialog.network.title=Netwerk
 preferences.dialog.networkmode.lanonly=alleen LAN
-preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma\'s in het Local Area Network.<BR>De enige verbinding \'uit\' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
+preferences.dialog.networkmode.private=Priv\u00E9 Netwerk
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Zet publiek folder delen uit. Beperkt verbindingen tot interesante gebruikers<BR>Feitelijk alleen naar vrienden, gebruikers op LAN en gebruikers, die lid zijn van uw folders.<BR>Verder verbind PowerFolder met aan aantal gebruikers zodat het mogelijk is vrienden in het netwerk te vinden.</BODY></HTML>
-preferences.dialog.networkmode.private=Privé Netwerk
 preferences.dialog.networkmode.public=Publiek Netwerk
-preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Zet publiek Folder delen aan.<BR>Privé folders zullen altijd een invitaie vereisen, ongeacht de netwerk mode.</BODY></HTML>
+preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Zet publiek Folder delen aan.<BR>Priv\u00E9 folders zullen altijd een invitaie vereisen, ongeacht de netwerk mode.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
 preferences.dialog.plugin.classname=Java classname
@@ -525,7 +554,7 @@ preferences.dialog.plugin.status_enabled=InActief
 preferences.dialog.plugin.title=Plugin
 preferences.dialog.restarttext=Door veranderingen in de instellingen is het nootzakelijk dat PowerFolder opnieuw opstart.\nWilt u PowerFolder nu opnieuw opstarten?\n 
 preferences.dialog.restarttitle=Opnieuw opstarten 
-preferences.dialog.showadvanged=Laat geadvanceerde instellingen zien
+##preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Activeer interne foto preview 
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>U kunt de interne foto preview vinden onder Mijn Folders->Folder->Bestanden->Details<BR>(Deze eigenschap van die programma is geheugen "hongerig" bij grote jpg's (>500K), gebruik voorzichtig.)</BODY></HTML>
 preferences.dialog.silentthrottle=Passive mode bandbreedte beperking 
@@ -585,6 +614,12 @@ reconnect.description=Reconnects to this user now
 reconnect.key=r
 reconnect.name=Reconnect
 
+##recyclebin.confirmation.overwrite.on.restore.changed.date=Changed {0}
+##recyclebin.confirmation.overwrite.on.restore.overwrite.filename=Overwrite {0}?
+##recyclebin.confirmation.overwrite.on.restore.size.bytes=Size {0}
+##recyclebin.confirmation.overwrite.on.restore.title=Restore file, overwrite?
+##recyclebin.confirmation.overwrite.on.restore.with.file.from.recyclebin=With file from recycle bin?
+
 remove_from_recycle_bin.description=Verwijder bestand van de PowerFolder Prullenbak
 remove_from_recycle_bin.key=V
 remove_from_recycle_bin.name=Verwijder bestand
@@ -607,6 +642,9 @@ requestfilelist.name=Vraag om nieuwe bestandenlijst
 requestnetfolderlist.description=Ververst de lijst van publieke folders
 requestnetfolderlist.key=V
 requestnetfolderlist.name=Ververs lijst
+
+##restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
+##restore.busy.title=Restoring file(s)
 
 restorefile.description=Maak verwijdering van bestand ongedaan
 restorefile.key=h
@@ -708,6 +746,10 @@ transfers.queued=in wachtrij
 transfers.requested=in wachtrij
 transfers.searching=Zoeken...
 transfers.to=Naar
+
+##unignorefile.description=File(s) will be downloaded/shared again
+##unignorefile.key=U
+##unignorefile.name=Remove from Ignore
 
 webservice_request_folder_join.description=Vraag de PowerFolder webstore service om lid the worden van deze folder.
 webservice_request_folder_join.key=w
