translation files streamlined with lowercase unicode hexchars

--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -17,7 +17,7 @@
 # http://www.powerfolder.com
 #
 
-abortcopy.description=Stop met copi\u00EBren
+abortcopy.description=Stop met copi\u00ebren
 abortcopy.key=S
 abortcopy.name=Stop
 
@@ -539,10 +539,10 @@ preferences.dialog.linesettings=Internet verbindings snelheid
 preferences.dialog.network.title=Netwerk
 preferences.dialog.networkmode.lanonly=alleen LAN
 preferences.dialog.networkmode.lanonly.tooltip=<HTML><BODY>Verbind alleen met PowerFolder programma's in het Local Area Network.<BR>De enige verbinding 'uit' is naar de update check website.<BR>Uw firewall zal mogelijk een uitgaande verbinding detecteren naar 224.0.0.1 of ALL-SYSTEMS.MCAST.NET<BR>Dit gebruiken we om andere PowerFolder programma's in uw LAN te detecteren.</BODY></HTML>
-preferences.dialog.networkmode.private=Priv\u00E9 Netwerk
+preferences.dialog.networkmode.private=Priv\u00e9 Netwerk
 preferences.dialog.networkmode.private.tooltip=<HTML><BODY>Zet publiek folder delen uit. Beperkt verbindingen tot interesante gebruikers<BR>Feitelijk alleen naar vrienden, gebruikers op LAN en gebruikers, die lid zijn van uw folders.<BR>Verder verbind PowerFolder met aan aantal gebruikers zodat het mogelijk is vrienden in het netwerk te vinden.</BODY></HTML>
 preferences.dialog.networkmode.public=Publiek Netwerk
-preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Zet publiek Folder delen aan.<BR>Priv\u00E9 folders zullen altijd een invitaie vereisen, ongeacht de netwerk mode.</BODY></HTML>
+preferences.dialog.networkmode.public.tooltip=<HTML><BODY>Zet publiek Folder delen aan.<BR>Priv\u00e9 folders zullen altijd een invitaie vereisen, ongeacht de netwerk mode.</BODY></HTML>
 preferences.dialog.nickname=Naam
 preferences.dialog.nonwindowsinfo=Attentie, sommige instellingen zijn alleen beschikbaar op windows computers
 preferences.dialog.plugin.classname=Java classname
